--- a/src/index.css
+++ b/src/index.css
@@ -25,32 +25,34 @@ html{
   font-style: normal;
   font-weight: 600;
   font-size: 28px;
-
   text-align: center;
   letter-spacing: -0.02em;
-
-
   color: #0d263b;
+  @media (max-width: 700px) {
+    font-size:20px;
+  }
 }
 .subTitle {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
-
   color: #0d263b;
+  @media (max-width: 700px) {
+    font-size:14px;
+  }
 }
-
 .info {
-
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   margin-top: 8px;
-
   color: #696969;
+  @media (max-width: 700px) {
+    font-size:12px;
+  }
 }
 
 .inline {
